# poc_lineage_backend

./: README.md  pyproject.toml  requirements.txt  test_redis.py
.github/workflows/: master_pipeline-health-poc.yml
api/: index.py
app/: main.py
app/api/: catalog_metadata.py  column_lineage.py  dq.py  health.py  information_schema.py  lineage_retriever.py  refresh.py  stats.py  table_lineage.py
app/cache/: dq_cache.py  table_cache.py
app/connectors/: databricks_connector.py  neo4j_connector.py
app/core/: config.py
app/data/: documentation.json  lineage.json
app/db/: databricks.py  neo4j.py  redis.py
app/extractors/: catalog_metadata_extractor.py  metadata_extractor.py
app/ingestion/: graph_ingestion.py
app/intelligence/: dagbuilder.py  fk_detection.py  fk_scoring.py  pk_detection.py  table_classification.py
app/jobs/: scheduler.py
app/lineage/: neo4j_lineage.py
app/retrieval/: lineage_retriever.py
app/services/: catalog_metadata_service.py  column_service.py  dq_service.py  health_service.py  inference.py  information_schema_service.py  ingestion_service.py  refresh_service.py  run_ingestion.py  stats_service.py  table_service.py
app/utils/: config.py  lineage_retriever.py  run_fk_detection.py  run_fk_scoring.py  run_ingestion.py  run_pk_detection.py  run_table_classification.py  scheduler.py
frontend_static/: api-base.js  index.html
scripts/: run_catalog_metadata_ingestion.py  run_fk_detection.py  run_fk_scoring.py  run_ingestion.py  run_pk_detection.py  run_table_classification.py  scheduler.py
(+18 files in other folders)
